# embedded-stable-neuron-mpc

./: .gitignore  ARCHITECTURE.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cmake/: arm-none-eabi.cmake
firmware/: board.cpp  board.hpp  koopman_reference_test_case.hpp  main.cpp  main_koopman.cpp  reference_test_case.hpp  startup.cpp  stm32l476rg.ld
include/condensed_solver/: config.hpp  custom_ipm.hpp  icnn_forward.hpp  jacobian.hpp  koopman_controller.hpp  koopman_encoder.hpp  koopman_types.hpp  math_ops.hpp  neuron_classifier.hpp  qp_builder.hpp  scp_controller.hpp  solver.hpp  types.hpp  weights.hpp
include/stable_neuron_solver/: config.hpp  custom_ipm.hpp  icnn_forward.hpp  jacobian.hpp  koopman_controller.hpp  koopman_encoder.hpp  koopman_types.hpp  math_ops.hpp  neuron_classifier.hpp  qp_builder.hpp  scp_controller.hpp  solver.hpp  types.hpp  weights.hpp
python/embedded_mpc/: __init__.py
python/embedded_mpc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/embedded_mpc/config/: __init__.py  device_config.py  device_params.json
python/embedded_mpc/solvers/: __init__.py  condensed_qp_solver.py  direct_qp_solver.py  piqp_solver.py  stable_neuron_qp_solver.py
src/: custom_ipm.cpp  icnn_forward.cpp  jacobian.cpp  koopman_controller.cpp  koopman_encoder.cpp  neuron_classifier.cpp  qp_builder.cpp  scp_controller.cpp  solver.cpp
test/: hil_koopman.cpp  hil_main.cpp
tests/: test_python_solvers.py
