[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "embedded-mpc"
version = "0.1.0"
description = "Embedded stable-neuron MPC for closed-loop DBS — Python tooling"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [{name = "Joshua Ampomah"}]
dependencies = [
    "numpy>=1.24,<2.0",
    "scipy>=1.10,<1.15",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
piqp = ["piqp>=0.2,<1.0"]

[tool.setuptools.packages.find]
where = ["python"]
